# TEE-Attestation-Verification

./: Cargo.toml  README.md
.github/workflows/: ci.yml
c/: CMakeLists.txt
c/examples/cpp/: CMakeLists.txt  README.md  main.cpp
c/include/: tee_attestation_verification.h
src/: certificate_chain.rs  ffi.rs  kds.rs  lib.rs  sev_verification.rs  utils.rs
src/crypto/: crypto_openssl.rs  crypto_pure_rust.rs  mod.rs
src/pinned_arks/: mod.rs
src/snp/: mod.rs  model.rs  report.rs  utils.rs  verify.rs
src/snp/root_certs/: mod.rs
tests/: common.rs  tests_native.rs  tests_node.rs
