[package]
name = "verification-lib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/camelron/verification-lib"
keywords = ["confidentiality", "sev-snp", "tpm"]
description = "WASM-compatible library for SEV-SNP verification and related types"
authors = ["Cameron Baird"]


[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "verify-attestation"
path = "src/bin/verify_cli.rs"

[features]
default = ["crypto_pure_rust", "serde"]
# If both enabled, defaults to crypto_pure_rust but expose the crypto_openssl module
crypto_openssl = ["dep:openssl"]
crypto_pure_rust = ["dep:ecdsa", "dep:p384", "dep:rsa"]
serde = ["dep:serde", "dep:serde-big-array", "dep:serde_json"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
# Shared
x509-cert = "0.2"
asn1-rs = "0.6"
hex = "0.4"
sha2 = "0.10"
base64 = "0.13"
bitfield = "0.14"

# Crypto
openssl = { version = "0.10", optional = true }
ecdsa = { version = "0.16", features = ["der", "verifying"], optional = true }
p384 = { version = "0.13", features = ["ecdsa"], optional = true}
rsa = { version = "0.9", optional = true }

# Logging / panic hooks for wasm
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
pem = "3.0.6"

zerocopy = {version = "0.8.31", features = ["derive"]}

# Serde (optional, enabled by default)
serde = { version = "1.0", features = ["derive", "std", "alloc"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-big-array = { version = "0.5.1", optional = true }

# WASM deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Native CLI deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
curl = "0.4"
